2012-12-24 Graeme Gott <graeme@gottcode.org>
	* Add support for compiling with Qt 5.0.0.

2010-11-24 Graeme Gott <graeme@gottcode.org>
	* Move novel management into main window.
	* Refactor adding novels.
	* Add vertical scaling.

2010-11-23 Graeme Gott <graeme@gottcode.org>
	* Refactor novel editing.
	* Update coding style.
	* Add portable mode.
	* Remove '2' from the project name.
	* Add ticks to bottom of graph.
	* Show line labels as full numbers.
	* Show daily values necessary to reach goal.

2010-11-18 Graeme Gott <graeme@gottcode.org>
	* Use spinboxes for goals.
	* Allow users to choose start and end dates.

2008-06-18 Graeme Gott <graeme@gottcode.org>
	* Tag version 2.0.5.

2008-06-17 Graeme Gott <graeme@gottcode.org>
	* FIXED: Binary not installed with make install.

2008-03-21 Graeme Gott <graeme@gottcode.org>
	* Tagged version 2.0.4
	* Add application icon.
	* Don't show select screen when creating first novel.

2008-03-20 Graeme Gott <graeme@gottcode.org>
	* Add Mac support.
	* Re-license to GPLv3.

2008-01-22 Graeme Gott <graeme@gottcode.org>
	* Add Windows support.

2007-11-24 Graeme Gott <graeme@gottcode.org>
	* Tagged version 2.0.3
	* FIXED: Daily was sometimes showing 100% at startup.

2007-11-05 Graeme Gott <graeme@gottcode.org>
	* Tagged version 2.0.2
	* Prompt user for novel name when there are no novels.
	* Add labels to progressbars.

2007-04-05 Graeme Gott <graeme@gottcode.org>
	* Tagged version 2.0.1
	* Remove leading zero from months in graph.
	* FIXED: New novels were not parsed correctly.
	* FIXED: Total progressbar didn't update with wordcount changes.

2006-12-04 Graeme Gott <graeme@gottcode.org>
	* Tagged version 2.0.0
	* Replace color generation algorithm.
	* FIXED: Segfault when goal was decreased under 20K.
	* FIXED: Novel list reload caused a segfault.
	* Add ability to remove a novel.
	* Add ability to rename a novel.
	* Add ability to create a novel.
	* Remember currently selected novel.
	* Restore main window geometry.