@@ -1,6 +1,9 @@
 2012-12-24 Graeme Gott <graeme@gottcode.org>
 	* Add support for compiling with Qt 5.0.0.
 
+2010-11-27 Graeme Gott <graeme@gottcode.org>
+	* Use spinbox for wordcount.
+
 2010-11-24 Graeme Gott <graeme@gottcode.org>
 	* Move novel management into main window.
 	* Refactor adding novels.
